feat: add example post

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
@@ -8,5 +9,8 @@
   "dependencies": {
     "vitepress": "1.0.0-rc.36",
     "vue": "^3.4.10"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.10"
   }
 }
